# RinaChanBoard

./: README.md  RinaChanBoard.code-workspace
Documents/: 2.总体设计.md  3.数据结构设计.md  4.通信报文设计.md  5.下位机系统功能设计.md  6.上位机工具设计.md  7.上位机组件设计.md  8.上位机页面设计.md  9.上位机资源数据.md  附录1-口型同步.md
RinaChanBoardHardware/: README.md  platformio.ini
RinaChanBoardHardware/PCB/: RinaBoard.eprj  RinaBoard_V1_0.eprj  第二版需求记录.md
RinaChanBoardHardware/RinaChanBoardHardware/: platformio.ini
RinaChanBoardHardware/RinaChanBoardHardware/include/: ESPAsyncUDP.h  configwifi.h  hw_sw_info.h  led.h  udpsocket.h
RinaChanBoardHardware/RinaChanBoardHardware/py/: 1.py  FaceModuleDb.json
RinaChanBoardHardware/RinaChanBoardHardware/src/: AsyncUDP.cpp  WiFiManager.cpp  configwifi.cpp  led.cpp  main.cpp  udpsocket.cpp  wifi.cpp
RinaChanBoardHardware/RinaChanBoardHardwareV2/: platformio.ini
RinaChanBoardHardware/include/: WiFiManager.h  bemfa.h  face.h  led.h  music.h  voice.h  wifi.h
RinaChanBoardHardware/src/: bemfa.cpp  face.cpp  main.cpp  music.cpp  voice.cpp  wifi.cpp
RinaChanBoardHardwareV2/: platformio.ini
RinaChanBoardHardwareV2/include/: configwifi.h  led.h  udpsocket.h
RinaChanBoardHardwareV2/src/: configwifi.cpp  led.cpp  main.cpp
RinaChanBoardOperationCenter/: .gitignore  README.md  app.js  app.json  app.wxss  project.config.json  project.miniapp.json  project.private.config.json
RinaChanBoardOperationCenter.wechatapp/: README.md  app.json  app.miniapp.json  app.wxss  project.config.json
RinaChanBoardOperationCenter.wechatapp/fonts/: iconfont.wxss
RinaChanBoardOperationCenter.wechatapp/utils/: face_func.js  voice_data.js
RinaChanBoardOperationCenter/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
RinaChanBoardOperationCenter/fonts/: iconfont.js  iconfont.json
RinaChanBoardOperationCenter/i18n/: base.json
RinaChanBoardOperationCenter/utils/: face_func.js  faces.js  music_data.js  util.js  voice_data.js
RinaChanBoardTester/: CMakeLists.txt  emoji_set.cpp  emoji_set.h  led.cpp  led.h  main.cpp  resources.qrc  rinatesterwindow.cpp  rinatesterwindow.h  rinatesterwindow.ui
models/: 右耳包.stl  外框.stl  左耳包.stl  猫耳朵(10cm加长).stl  猫耳朵(5cm加长).stl  猫耳朵.stl  装配图.f3d  面板.stl
(+265 files in other folders)
